--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.12.6",
+    "@vueuse/core": "^10.9.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.359.0",
     "openai": "^4.28.4",
-    "vue": "^3.4.15"
+    "radix-vue": "^1.5.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.4.15",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
+    "@types/node": "^20.11.30",
     "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.18",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.11"
   }
 }
